cleaning up and frontend changes
