# app/controllers/api/v1/analytics_controller.rb
@@ -1,0 +1,13 @@
+module Api
+  module V1
+    class AnalyticsController < BaseController
+      def show
+        render_success(AnalyticsQuery.call)
+      end
+
+      def ask
+        render_success(AnalyticsAsker.call(question: params[:question]))
+      end
+    end
+  end
+end
