# app/controllers/api/v1/employees_controller.rb
@@ -1,7 +1,7 @@
 module Api
   module V1
     class EmployeesController < BaseController
-      include Pagy::Backend
+      include ::Pagy::Backend
 
       def index
         query = DirectoryQuery.new(params)
@@ -22,9 +22,18 @@ module Api
         render_success(employee_payload(employee, record), status: :created)
       end
 
+      def update
+        employee = EmployeeUpdater.call(employee: Employee.find(params[:id]), params: employee_update_params)
+        render_success(EmployeeProfile.call(employee))
+      end
+
       def offboard
         employee = EmployeeOffboarder.call(employee: Employee.find(params[:id]), left_on: params[:left_on])
         render_success({ employee: employee.as_directory_json })
+      end
+
+      def import
+        render_success(DirectoryImporter.call(import_file))
       end
 
       private
@@ -47,10 +56,23 @@ module Api
 
       def employee_params
         params.permit(
-          :first_name, :last_name, :email, :country, :department,
-          :employment_type, :level, :started_on,
+          *EmployeeUpdater::ATTR_KEYS,
           compensation: CompensationRecord::ATTR_KEYS
         )
+      end
+
+      def employee_update_params
+        params.permit(*EmployeeUpdater::ATTR_KEYS)
+      end
+
+      def import_file
+        file = params[:file]
+        raise AppError, "file is required" if file.blank?
+
+        name = file.respond_to?(:original_filename) ? file.original_filename : file.to_s
+        raise AppError, "upload a CSV file" unless File.extname(name.to_s).downcase == ".csv"
+
+        file
       end
     end
   end
